syntax = "proto2";

enum LoginCmd{
	INVALID_LOGIN_CMD = 0;
	eGuestLoginReq =1;
}

message GuestLoginReq{
	required string guest_key = 1;
}